# us-cli-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_chat.py  test_direct.py  test_full.py
src/us_cli/: __init__.py  config.py  llm.py  loop.py  main.py  memory.py  prompt.py
src/us_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/us_cli/tools/: registry.py
